v3/attribute-classes/att.measure.log.md
---
layout: sidebar
sidebar: s1
version: "v3"
title: "att.measure.log"

---

<div class="classSpec att">
   <h3 id="att.measure.log">att.measure.log</h3>
   <table class="wovenodd">
      <tr>
         <td colspan="2" class="wovenodd-col2">
            <span class="label">att.measure.log</span> Logical domain attributes. The n attribute contains a name or number associated with
            the
            measure (Read, p. 445). Often, this is an integer, but not always. For example, some
            measures, especially incomplete measures or those under an ending mark, may have labels
            that
            contain an integer plus a suffix, such as '12a'. Measures may even have labels, especially
            in editorial or analytical uses of MEI, that are entirely non-numeric strings. Measure
            numbers may be machine-generated instead of encoding them in the markup. However,
            an
            explicit measure number should restart numbering with the given value. The join attribute
            may be used to indicate another measure which metrically completes the current, incomplete
            one.
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <span class="label" lang="en">Module</span>
         </td>
         <td class="wovenodd-col2">MEI.shared</td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <span class="label" lang="en">Members</span>
         </td>
         <td class="wovenodd-col2">
            <div class="parent">
               <div>
                  <a class="link_odd_elementSpec" href="/{{ page.version }}/measure">measure</a> (direct member of att.measure.log)
               </div>
            </div>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <span class="label" lang="en">Attributes</span>
         </td>
         <td class="wovenodd-col2">
            <div class="attributeDef">
               <span class="attribute">@control</span>
               <span class="attributeUsage">(optional)</span>
               <span class="attributeDesc">Indicates whether or not a bar line is "controlling"; that is, if it indicates a
                  point of alignment across all the parts. Bar lines within a score are usually
                  controlling; that is, they "line up". Bar lines within parts may or may not be
                  controlling. When applied to &lt;measure&gt;, this attribute indicates the nature of the
                  right barline but not the left.
               </span>
               Value conforms to 
               <a class="link_odd_classSpec" href="/{{ page.version }}/data.BOOLEAN">data.BOOLEAN</a>.
               
               <span class="attributeClasses">
                  <a class="link_odd" href="/{{ page.version }}/att.meterconformance.bar">att.meterconformance.bar</a>
               </span>
            </div>
            <div class="attributeDef">
               <span class="attribute">@left</span>
               <span class="attributeUsage">(optional)</span>
               <span class="attributeDesc">Indicates the visual rendition of the left bar line. It is present here only for
                  facilitation of translation from legacy encodings which use it. Usually, it can be
                  safely ignored.
               </span>
               Value conforms to 
               <a class="link_odd_classSpec" href="/{{ page.version }}/data.BARRENDITION">data.BARRENDITION</a>.
               
               <span class="attributeClasses">
                  <a class="link_odd" href="/{{ page.version }}/att.measure.log">att.measure.log</a>
               </span>
            </div>
            <div class="attributeDef">
               <span class="attribute">@metcon</span>
               <span class="attributeUsage">(optional)</span>
               <span class="attributeDesc">Indicates the relationship between the content of a measure and the prevailing
                  meter.
               </span>
               Value conforms to 
               <a class="link_odd_classSpec" href="/{{ page.version }}/data.BOOLEAN">data.BOOLEAN</a>.
               
               <span class="attributeClasses">
                  <a class="link_odd" href="/{{ page.version }}/att.meterconformance.bar">att.meterconformance.bar</a>
               </span>
            </div>
            <div class="attributeDef">
               <span class="attribute">@right</span>
               <span class="attributeUsage">(optional)</span>
               <span class="attributeDesc">Indicates the function of the right bar line and is structurally important.</span>
               Value conforms to 
               <a class="link_odd_classSpec" href="/{{ page.version }}/data.BARRENDITION">data.BARRENDITION</a>.
               
               <span class="attributeClasses">
                  <a class="link_odd" href="/{{ page.version }}/att.measure.log">att.measure.log</a>
               </span>
            </div>
         </td>
      </tr>
      <tr>
         <td class="wovenodd-col1">
            <span class="label" lang="en">Declaration</span>
         </td>
         <td class="wovenodd-col2">
            <div xml:space="preserve" class="pre">
               <div class="indent1">
                  <span data-indentation="1" class="element">&lt;classes&gt;</span>
                  
                  <div class="indent2">
                     <span data-indentation="2" class="element">&lt;memberOf 
                        <span class="attribute">key=</span>
                        <span class="attributevalue">"
                           <a class="link_odd" href="/att.meterconformance.bar">att.meterconformance.bar</a>"
                        </span>/&gt;
                     </span>
                  </div>
                  
                  <span data-indentation="1" class="element">&lt;/classes&gt;</span>
               </div>
            </div>
            <div xml:space="preserve" class="pre">
               <div class="indent1">
                  <span data-indentation="1" class="element">&lt;attDef 
                     <span class="attribute">ident=</span>
                     <span class="attributevalue">"left"</span> 
                     <span class="attribute">usage=</span>
                     <span class="attributevalue">"opt"</span>&gt;
                  </span>
                  
                  <div class="indent2">
                     <span data-indentation="2" class="element">&lt;desc&gt;</span>Indicates the visual rendition of the left bar line. It is present here only for
                     facilitation of translation from legacy encodings which use it. Usually, it can be
                     safely ignored.
                     <span data-indentation="2" class="element">&lt;/desc&gt;</span>
                  </div>
                  
                  <div class="indent2">
                     <span data-indentation="2" class="element">&lt;datatype 
                        <span class="attribute">maxOccurs=</span>
                        <span class="attributevalue">"1"</span> 
                        <span class="attribute">minOccurs=</span>
                        <span class="attributevalue">"1"</span>&gt;
                     </span>
                     
                     <div class="indent3">
                        <span data-indentation="3" class="element">&lt;rng:ref 
                           <span class="attribute">name=</span>
                           <span class="attributevalue">"
                              <a class="link_odd" href="/data.BARRENDITION">data.BARRENDITION</a>"
                           </span>/&gt;
                        </span>
                     </div>
                     
                     <span data-indentation="2" class="element">&lt;/datatype&gt;</span>
                  </div>
                  
                  <span data-indentation="1" class="element">&lt;/attDef&gt;</span>
               </div>
            </div>
            <div xml:space="preserve" class="pre">
               <div class="indent1">
                  <span data-indentation="1" class="element">&lt;attDef 
                     <span class="attribute">ident=</span>
                     <span class="attributevalue">"right"</span> 
                     <span class="attribute">usage=</span>
                     <span class="attributevalue">"opt"</span>&gt;
                  </span>
                  
                  <div class="indent2">
                     <span data-indentation="2" class="element">&lt;desc&gt;</span>Indicates the function of the right bar line and is structurally important.
                     <span data-indentation="2" class="element">&lt;/desc&gt;</span>
                  </div>
                  
                  <div class="indent2">
                     <span data-indentation="2" class="element">&lt;datatype 
                        <span class="attribute">maxOccurs=</span>
                        <span class="attributevalue">"1"</span> 
                        <span class="attribute">minOccurs=</span>
                        <span class="attributevalue">"1"</span>&gt;
                     </span>
                     
                     <div class="indent3">
                        <span data-indentation="3" class="element">&lt;rng:ref 
                           <span class="attribute">name=</span>
                           <span class="attributevalue">"
                              <a class="link_odd" href="/data.BARRENDITION">data.BARRENDITION</a>"
                           </span>/&gt;
                        </span>
                     </div>
                     
                     <span data-indentation="2" class="element">&lt;/datatype&gt;</span>
                  </div>
                  
                  <span data-indentation="1" class="element">&lt;/attDef&gt;</span>
               </div>
            </div>
         </td>
      </tr>
   </table>
</div>